# dogel_chat

./: .gitignore  Cargo.toml  MVP_STATUS.md  Makefile  README.md  SECURITY_MODEL.md  mvp_spec_dogel_bin_v_0_1.md
crates/dogel-cli/: Cargo.toml
crates/dogel-cli/src/: main.rs
crates/eve-core/: Cargo.toml
crates/eve-core/src/: command.rs  lib.rs
crates/eve-crypto/: Cargo.toml
crates/eve-crypto/src/: lib.rs
crates/eve-p2p/: Cargo.toml
crates/eve-p2p/src/: lib.rs
crates/eve-protocol/: Cargo.toml
crates/eve-protocol/src/: lib.rs
crates/eve-storage/: Cargo.toml
crates/eve-storage/src/: lib.rs
