[package]
name = "eve-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5"
base64 = "0.22"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = "2.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zeroize = "1.8"
