[package]
name = "eve-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3"
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "ping",
    "identify",
    "autonat",
    "dcutr",
    "relay",
    "request-response",
    "json",
    "macros",
] }
eve-protocol = { path = "../eve-protocol" }
serde = { version = "1.0", features = ["derive"] }

libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time"] }
