[package]
name = "eve-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
directories = "5.0"
ed25519-dalek = "2.1"
eve-crypto = { path = "../eve-crypto" }
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
zeroize = "1.8"
